# ctruck

./: .clangd  .gitignore  CMakeLists.txt
lib/glog/: .gitignore  build.cmake
lib/googletest/: .gitignore  build.cmake
lib/kangaru/: .gitignore  build.cmake
lib/raylib/: .gitignore  build.cmake
macos/: CMakeLists.txt  main.cpp
scripts/: build.sh  glog.sh  googletest.sh  kangaru.sh  raylib.sh  run.sh  test.sh
src/Ctruck/: constant.hpp
src/Ctruck/common/: logger.cpp  logger.hpp  screen.cpp  screen.hpp
src/Ctruck/services/: container.cpp  container.hpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  demo.cpp
